<resources>
    <string name="app_name">GP Out of Hours Service</string>
    <string name="oncallheading">On-Call Team</string>
    <string name="hubmanheading">Hub Manager</string>
    <string name="timewasterheading">Time Waster Zone</string>
    <string name="addnewpatient">Add New Patient</string>
    <string name="savenewpatient">Save New Patient</string>
    <string name="activepatients">Active Patients</string>
    <string name="forename">Enter Patient Forename(s)</string>
    <string name="surname">Enter Patient Surname(s)</string>
    <string name="team">Assign Team Number (1-10)</string>
    <string name="chinumber">Enter Patient CHI Number</string>
    <string name="dob">Enter Patient D.O.B (xx-xx-xx)</string>
    <string name="address">Enter Patient Address</string>
    <string name="patientheight">Enter Patient Height (cm)</string>
    <string name="patientweight">Enter Patient Weight (lbs)</string>
    <string name="callHubManager">Call Hub Manager</string>
    <string name="title_activity_maps">Clinical Team Location (LIVE)</string>
    <string name="team_locations">Team Location</string>
    <string name="pick_team">Confirm Team Selection</string>
    <string name="team_select_hint">(1 - 10)</string>

    <string name="adapter_layout_name">Patient</string>
    <string name="adapter_layout_team">Team</string>


    <string name="choose_weapon">Choose your weapon!!</string>
    <string name="start_game">Start Game</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="challenger">Your challenger today is</string>
    <string name="play_music">Play Music!</string>
    <string name="scoreboard">SCOREBOARD</string>
    <string name="play_again">Play Next Round</string>
    <string name="new_game">Start New Game</string>
    <string name="opponent_image">Image of Player B</string>
    <string name="vs">VS</string>

    <string name="app_logo">Image of app logo</string>
    <string name="rock_image">Image of a rock</string>
    <string name="scissor_image">Image of scissors</string>
    <string name="paper_image">Image of paper</string>
    <string name="home_button">Home Button</string>
    <string name="nhs_logo">NHS Logo</string>
    <string name="player_a_image">Image of Player A\'s weapon</string>
    <string name="player_b_image">Image of Player B\'s weapon</string>

    <!--View Patient Activity-->
    <string name="chi">CHI</string>
    <string name="forename_s">Forename(s)</string>
    <string name="patient_details">Patient Details</string>
    <string name="height">Height</string>
    <string name="surnamepd">Surname</string>
    <string name="addresspd">Address</string>
    <string name="dobpd">DOB</string>
    <string name="weight">Weight</string>
    <string name="chi_number">CHI Number</string>
    <string name="name">Name</string>
    <string name="namesn">Name</string>
    <string name="address_details">Address Details</string>
    <string name="dob_details">DOB Details</string>
    <string name="details">Details</string>
    <string name="details2">Details</string>
    <string name="todo">TODO</string>
    <string name="backoncall">Back</string>
    <string name ="mapbutton">Show Patient Location</string>

</resources>
