<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bgcolor">

    <ImageView
        android:id="@+id/imageViewEP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/nhs_small"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintVertical_bias="0.004"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textViewEditPatientHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hubmanheading"
        android:textStyle="bold"
        android:gravity="right"
        android:textColor="@color/headingcolor"
        android:textSize="@dimen/textsize"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintVertical_bias="0.017"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/buttonsavePatient"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textSize="@dimen/button_textsize"
        android:textAllCaps="false"
        android:text="@string/savenewpatient"
        android:background="@color/buttonbgcolor"
        android:textColor="@color/buttontxtcolor"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintVertical_bias="0.982"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ImageButton
        android:id="@+id/imageButtonep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/bgcolor"
        app:srcCompat="@drawable/home_button"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintVertical_bias="0.982"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textViewAddPatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/addnewpatient"
        android:textColor="@color/headingcolor"
        android:textSize="@dimen/subtextsize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139" />

    <EditText
        android:id="@+id/editTextCHINumber"
        android:layout_width="322dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/chinumber"
        android:text=""
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonsavePatient"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddPatient"
        app:layout_constraintVertical_bias="0.108" />

    <EditText
        android:id="@+id/editTextFName"
        android:layout_width="322dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/forename"
        android:text=""
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonsavePatient"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddPatient"
        app:layout_constraintVertical_bias="0.233" />

    <EditText
        android:id="@+id/editTextSurname"
        android:layout_width="322dp"
        android:layout_height="38dp"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/buttonsavePatient"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddPatient"
        app:layout_constraintVertical_bias="0.358" />

    <EditText
        android:id="@+id/editTextDob"
        android:layout_width="322dp"
        android:layout_height="38dp"
        android:ems="10"
        android:hint="@string/dob"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/buttonsavePatient"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddPatient"
        app:layout_constraintVertical_bias="0.608" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="322dp"
        android:layout_height="38dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/buttonsavePatient"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddPatient"
        app:layout_constraintVertical_bias="0.483" />

    <EditText
        android:id="@+id/editTextHeight"
        android:layout_width="322dp"
        android:layout_height="38dp"
        android:ems="10"
        android:hint="@string/patientheight"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/buttonsavePatient"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddPatient"
        app:layout_constraintVertical_bias="0.858" />

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="322dp"
        android:layout_height="38dp"
        android:ems="10"
        android:hint="@string/patientweight"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/buttonsavePatient"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddPatient"
        app:layout_constraintVertical_bias="0.733" />

</android.support.constraint.ConstraintLayout>
